src/objects/Role_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Active_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <picklist>
            <picklistValues>
                <fullName>activities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Information__c</fullName>
        <inlineHelpText>Please fill in Postcode, Town or Address or other appropriate location information for display on website here.</inlineHelpText>
        <label>Additional Location Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertise_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the role receives applications over your stated capacity, do you want them added to a waiting list for future recruitment?</inlineHelpText>
        <label>Advertise Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <inlineHelpText>Enter the times when the volunteers will be needed</inlineHelpText>
        <label>When Will You Be Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mon am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mon pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mon eve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tues am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tues pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tues eve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wed am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wed pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wed eve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thurs am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thurs pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thurs eve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri eve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat eve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun eve</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Budget_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <inlineHelpText>Enter the number of volunteers you want to recruit for this opportunity</inlineHelpText>
        <label>How Many Volunteers Do You Need?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charity__c</fullName>
        <label>Charity</label>
        <picklist>
            <picklistValues>
                <fullName>Action for Blind People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNIB Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNIB Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criminal_Record_Check_advertised__c</fullName>
        <formula>CASE( DBS_Check_required__c , 
&quot;No Check Required&quot;, &quot;This role does not require a criminal record check&quot;,
&quot;Access NI Standard&quot;, &quot;This role requires a standard criminal record check&quot;, 
&quot;Access NI Enhanced&quot;, &quot;This role requires an enhanced criminal record check&quot;,
&quot;Access NI Enhanced Check for Regulated Activity with Adults&quot;, &quot;This role requires a criminal record check.  Access NI Enhanced Check for Regulated Activity with Adults&quot;,
&quot;Access NI Enhanced Check for Regulated Activity with Children&quot;, &quot;This role requires a criminal record check.  Access NI Enhanced Check for Regulated Activity with Children &quot;,
&quot;Access NI Enhanced Check for Regulated Activity with Adults and Children&quot;, &quot;This role requires a criminal record check.  Access NI Enhanced Check for Regulated Activity with Children Adults and Children&quot;,
&quot;DBS Standard&quot;, &quot;This role requires a standard criminal record check&quot;,
&quot;DBS Enhanced&quot;, &quot;This role requires an enhanced criminal record check&quot;,
&quot;DBS Enhanced Check for Regulated Activity with Adults&quot;, &quot;This role requires a criminal record check.  DBS Enhanced Check for Regulated Activity with adults&quot;,
&quot;DBS Enhanced Check for Regulated Activity with Children&quot;, &quot;This role requires a criminal record check.  DBS Enhanced Check for Regulated Activity with children&quot;,
&quot;DBS Enhanced Check for Regulated Activity with Adults and Children&quot;, &quot;This role requires a criminal record check.  DBS Enhanced Check for Regulated Activity with adults and children&quot;,
&quot;PVG Scotland Children&quot; , &quot;This role requires membership of the PVG (Protecting Vulnerable Groups) Scheme (Children).&quot;,
&quot;PVG Scotland Adults&quot;, &quot;This role requires membership of the PVG (Protecting Vulnerable Groups) Scheme (Adults).&quot;,
&quot;PVG Scotland Adults and Children&quot;, &quot;This role requires membership of the PVG (Protecting Vulnerable Groups) Scheme (Children and Adults).&quot;
, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criminal Record Check Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Check_required__c</fullName>
        <label>Criminal Record Check Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Access NI Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Access NI Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access NI Enhanced check for regulated activity with adults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access NI Enhanced check for regulated activity with children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access NI Enhanced check for regulated activity with adults and children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Enhanced check for regulated activity with adults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Enhanced check for regulated activity with children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS Enhanced check for regulated activity with adults and children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVG Scotland Adults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVG Scotland Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVG Scotland Adults and Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Check Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <label>Date Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Directorate__c</fullName>
        <label>Directorate</label>
        <picklist>
            <controllingField>Charity__c</controllingField>
            <picklistValues>
                <fullName>Group Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Marketing and Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_want_your_opportunity_advertised__c</fullName>
        <inlineHelpText>All volunteer roles are advertised on RNIB and associate websites, Do It, Guardian, Charity Job and Third Sector.</inlineHelpText>
        <label>Do You Want Your Opportunity Advertised?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date_Minus_7_Days__c</fullName>
        <formula>End_Date__c  - 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Minus 7 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>today()+180</defaultValue>
        <inlineHelpText>This is the date that the opportunity is closed.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_per_week__c</fullName>
        <inlineHelpText>Indicate the estimated number of hours per week the volunteers will be needed</inlineHelpText>
        <label>How Many Hours A Week Are You Needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_not_why_not__c</fullName>
        <inlineHelpText>If you do not want the Opportunity advertised, please indicate the reasons why here</inlineHelpText>
        <label>If Not Why Not?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Induction_Call_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If an induction teleconference call is needed, please indicate here</inlineHelpText>
        <label>Is An Induction Teleconference Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <description>Information required for advertising on external websites and matching volunteer interests</description>
        <inlineHelpText>Information required for advertising on external websites and matching volunteer interests</inlineHelpText>
        <label>Type of Activity/Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice Info and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending and Buddying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns and Lobbying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers and Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment and Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing, PR, Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching, Training and Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusteeship and Committee work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Work</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Leacy_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Leacy Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Role_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Role ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>DBS_Check_required__c</controllingField>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire/Humber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NVIS_Account_No__c</fullName>
        <externalId>true</externalId>
        <label>NVIS Account No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Times_Cloned__c</fullName>
        <label>Number Of Times Cloned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Applications__c</fullName>
        <label>Number of Applications</label>
        <summaryForeignKey>Application__c.Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_References_Required__c</fullName>
        <inlineHelpText>Enter the number of references required in order to successfully apply for this role</inlineHelpText>
        <label>Number of References Required</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Spaces_Left__c</fullName>
        <formula>Capacity__c  -  Number_of_Successful_Applicants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Spaces Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Successful_Applicants__c</fullName>
        <label>Number of Successful Applicants</label>
        <summaryFilterItems>
            <field>Application__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Role</value>
        </summaryFilterItems>
        <summaryForeignKey>Application__c.Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Family__c</fullName>
        <label>Opportunity Family</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice Information and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending-Social Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children, Young People and Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talking Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusteeship and Advisory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://uat-rnib.cs18.force.com/Application?id=&quot;+Id, &quot;https://uat-rnib.cs18.force.com/Application?id=&quot;+Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sources__c</fullName>
        <inlineHelpText>If you need assistance advertising locally please contact GVT</inlineHelpText>
        <label>Local Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Volunteer Centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RNIB_Group__c</fullName>
        <label>RNIB Group</label>
        <picklist>
            <picklistValues>
                <fullName>Action for Blind People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff Institute for the Blind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has a role risk assessment been carried out?</inlineHelpText>
        <label>Has This Opportunity Been Risk Assessed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <inlineHelpText>Describe the Purpose and Aims of the role in a short, punchy paragraph.</inlineHelpText>
        <label>Description</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Support - Community Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive Technology Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns Buddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee Morning Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Councelling and Emotional Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver - Social Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eye Clinic Information Giver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eye Clinic Patient Feedback Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Connected Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Eye Clinic Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Outdoor Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning resources assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy/Funeral Director Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Fundraising Group Chair/Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Fundraising Group Communications Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Fundraising Group Helper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Fundraising Group Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Fundraising Group Treasurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing and Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Office Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receptionist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Activity Care Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_involve_working_with_Children__c</fullName>
        <label>Role Involves Working With Children?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <picklist>
            <controllingField>Directorate__c</controllingField>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy and Performance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Service 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <inlineHelpText>Skills and Experience which are required for the Role</inlineHelpText>
        <label>What Skills/Experience Are Needed?</label>
        <picklist>
            <controllingField>Opportunity_Family__c</controllingField>
            <picklistValues>
                <fullName>Ability to ask questions sensitively</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to communicate clearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to find innovative solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to listen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to listen to others ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to take instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to use your own initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to prioritise tasks and be flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to run about 200 metres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to use own initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Able to work unsupervised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A caring and friendly nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to phone, e-mail &amp; internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurately/fluently read materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurate typing at a reasonable speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A flexible approach to the role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A good communicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A knowledge of general admin practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A listening ear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A natural empathy with people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An interest in technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An interest in technology innovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A pleasant telephone manner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approachable &amp; empathetic nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approachable telephone manner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A reliable and conscientious attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask for help and receive supervision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attention to detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness of other Assistive Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A welcoming and friendly nature</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>This is the date that the opportunity is available from.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Area__c</fullName>
        <label>Strategic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for the list...</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>